Trainer can rate & comment student in their module, and can get all comment for their student