@@ -6,108 +6,117 @@ import com.example.apiformatech.model.SessionModule;
 import com.example.apiformatech.model.StudentModuleComment;
 import com.example.apiformatech.model.User;
 import com.example.apiformatech.repository.SessionModuleRepository;
+import com.example.apiformatech.repository.SessionUserRepository;
 import com.example.apiformatech.repository.StudentModuleCommentRepository;
 import com.example.apiformatech.repository.UserRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class StudentModuleCommentService {
 
-    private final StudentModuleCommentRepository studentModuleCommentRepository;
+    private final StudentModuleCommentRepository commentRepository;
     private final UserRepository userRepository;
     private final SessionModuleRepository sessionModuleRepository;
+    private final SessionUserRepository sessionUserRepository;
 
-    // Injection des dépendances via le constructeur
-    public StudentModuleCommentService(StudentModuleCommentRepository studentModuleCommentRepository, UserRepository userRepository, SessionModuleRepository sessionModuleRepository) {
-        this.studentModuleCommentRepository = studentModuleCommentRepository;
+    public StudentModuleCommentService(StudentModuleCommentRepository commentRepository,
+                                       UserRepository userRepository,
+                                       SessionModuleRepository sessionModuleRepository,
+                                       SessionUserRepository sessionUserRepository) {
+        this.commentRepository = commentRepository;
         this.userRepository = userRepository;
         this.sessionModuleRepository = sessionModuleRepository;
+        this.sessionUserRepository = sessionUserRepository;
     }
 
-    // Méthode pour sauvegarder un commentaire et une note
-    public StudentModuleComment saveComment(StudentModuleComment comment) {
-        if(studentModuleCommentRepository.existsByStudentAndTrainerAndSessionModule(comment.getStudent(), comment.getTrainer(), comment.getSessionModule())){
-            throw new ResourceNotFoundException("Le commentaire pour cet élève sur ce module existe déjà.");
-        }
-        comment.setCreatedAt(new Date());
-        return studentModuleCommentRepository.save(comment);
-    }
+    // Ajouter plusieurs notes et commentaires pour un module et une session
+    @Transactional
+    public List<StudentModuleComment> addComments(Long moduleId, Long sessionId,
+                                                  List<StudentModuleComment> comments,
+                                                  UserDetails userDetails) {
+        User trainer = userRepository.findByEmail(userDetails.getUsername())
+                .orElseThrow(() -> new ResourceNotFoundException("Utilisateur non trouvé"));
 
-    public List<StudentModuleComment> getCommentsByRole(UserDetails userDetails) {
-        User user = userRepository.findByEmail(userDetails.getUsername())
-                .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
+        SessionModule sessionModule = (SessionModule) sessionModuleRepository.findByModule_IdAndSession_Id(moduleId, sessionId)
+                .orElseThrow(() -> new ResourceNotFoundException("Module non lié à cette session."));
 
-        String role = user.getRole().getTitle();
-
-        if ("SUPERADMIN".equals(role)) {
-            return studentModuleCommentRepository.findAll();
+        if (!sessionModule.getTrainer().equals(trainer)) {
+            throw new BadRequestException("Vous ne pouvez noter que les élèves de vos modules.");
         }
 
-        if ("ADMIN".equals(role)) {
-            if (user.getEstablishment() == null) {
-                throw new RuntimeException("L'admin n'est rattaché à aucun établissement.");
+        return comments.stream().map(comment -> {
+            if (!sessionUserRepository.existsByUserIdAndSessionId(comment.getStudent().getId(), sessionId)) {
+                throw new BadRequestException("L'élève " + comment.getStudent().getId() + " n'est pas inscrit à cette session.");
             }
 
-            return studentModuleCommentRepository.findAll().stream()
-                    .filter(comment -> comment.getSessionModule().getSession().getEstablishment().equals(user.getEstablishment()))
-                    .collect(Collectors.toList());
-        }
+            comment.setTrainer(trainer);
+            comment.setSessionModule(sessionModule);
+            comment.setCreatedAt(new Date());
 
-        if ("TRAINER".equals(role)) {
-            List<SessionModule> trainerModules = sessionModuleRepository.findByTrainer(user);
-
-            return studentModuleCommentRepository.findAll().stream()
-                    .filter(comment -> trainerModules.contains(comment.getSessionModule()) ||
-                            trainerModules.stream().anyMatch(sessionModule ->
-                                    sessionModule.getSession().equals(comment.getSessionModule().getSession())))
-                    .collect(Collectors.toList());
-        }
-
-        if ("STUDENT".equals(role)) {
-            return studentModuleCommentRepository.findAll().stream()
-                    .filter(comment -> comment.getStudent().equals(user))
-                    .collect(Collectors.toList());
-        }
-
-        throw new BadRequestException("Accès refusé");
+            return commentRepository.save(comment);
+        }).toList();
     }
 
-    // Méthode pour récupérer tous les commentaires et notes
-//    public List<StudentModuleComment> getAllComments() {
-//        return studentModuleCommentRepository.findAll();
-//    }
+    // Modifier plusieurs notes et commentaires pour un module et une session
+    @Transactional
+    public List<StudentModuleComment> updateComments(Long moduleId, Long sessionId,
+                                                     List<StudentModuleComment> comments,
+                                                     UserDetails userDetails) {
+        User trainer = userRepository.findByEmail(userDetails.getUsername())
+                .orElseThrow(() -> new ResourceNotFoundException("Utilisateur non trouvé"));
 
-    // Méthode pour récupérer un commentaire par son ID
-    public Optional<StudentModuleComment> getCommentById(Long id) {
-        return studentModuleCommentRepository.findById(id);
+        return comments.stream().map(comment -> {
+            StudentModuleComment existingComment = commentRepository.findById(comment.getId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Commentaire introuvable"));
+
+            if (!existingComment.getTrainer().equals(trainer)) {
+                throw new BadRequestException("Vous ne pouvez modifier que vos propres évaluations.");
+            }
+
+            existingComment.setGrade(comment.getGrade());
+            existingComment.setComment(comment.getComment());
+            existingComment.setUpdatedAt(new Date());
+
+            return commentRepository.save(existingComment);
+        }).toList();
     }
 
-    // Méthode pour mettre à jour un commentaire et une note
-    public StudentModuleComment updateComment(Long id, StudentModuleComment updatedComment) {
-        StudentModuleComment existingComment = studentModuleCommentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Comment not found"));
+    // Récupérer les commentaires d'un module et d'une session en fonction du rôle
+    public List<StudentModuleComment> getComments(Long moduleId, Long sessionId, UserDetails userDetails) {
+        User user = userRepository.findByEmail(userDetails.getUsername())
+                .orElseThrow(() -> new ResourceNotFoundException("Utilisateur non trouvé"));
 
-        // Met à jour les informations du commentaire
-        existingComment.setGrade(updatedComment.getGrade());
-        existingComment.setComment(updatedComment.getComment());
-        existingComment.setUpdatedAt(new Date()); // Met à jour la date de mise à jour
+        // Vérification que le module est bien lié à la session
+        SessionModule sessionModule = (SessionModule) sessionModuleRepository.findByModule_IdAndSession_Id(moduleId, sessionId)
+                .orElseThrow(() -> new ResourceNotFoundException("Module non lié à cette session."));
 
-        return studentModuleCommentRepository.save(existingComment);
+        return switch (user.getRole().getTitle()) {
+            case "SUPERADMIN" -> commentRepository.findByModuleAndSession(moduleId, sessionId);
+            case "ADMIN" -> commentRepository.findByEstablishment(moduleId, sessionId, user.getEstablishment());
+            case "TRAINER" -> commentRepository.findBySessionForTrainer(sessionId, user);
+            case "STUDENT" -> commentRepository.findByStudentAndSessionModule(user, sessionModule);
+            default -> throw new BadRequestException("Accès interdit.");
+        };
     }
 
 
-    // Méthode pour supprimer un commentaire par son ID
-    public void deleteComment(Long id) {
-        if (!studentModuleCommentRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Commentaire avec l'ID" + id + " n'existe pas");
+    // Supprimer un commentaire (uniquement si le formateur est l’auteur)
+    public void deleteComment(Long id, UserDetails userDetails) {
+        User trainer = userRepository.findByEmail(userDetails.getUsername())
+                .orElseThrow(() -> new ResourceNotFoundException("Utilisateur non trouvé"));
+
+        StudentModuleComment comment = commentRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Commentaire introuvable"));
+
+        if (!comment.getTrainer().equals(trainer)) {
+            throw new BadRequestException("Vous ne pouvez supprimer que vos propres évaluations.");
         }
-        studentModuleCommentRepository.deleteById(id);
+
+        commentRepository.deleteById(id);
     }
 }
-
